Fixed spacing on index search bar that was causing search button to be pushed down to next line

--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,5 @@
 .textbox-container {
-  width: calc(100% - 75px);
+  width: calc(100% - 85px);
   margin-right: 10px;
   position: relative;
   float: left;
